# FrontC

./: .cvsignore  .gitignore  .project  AUTHORS  ChangeLog  FrontC.opam  INSTALL  META  Makefile  Makefile.am  Makefile.head  Makefile.in  Makefile.tail  NEWS  README  README.md  calipso.opam  configure.in  ctoxml.opam  dune  dune-project
.github/workflows/: test.yml
calipso/: Makefile  NOTES.txt  algo.ml  calipso.ml  dune  gen.ml  label.ml  reduce.ml  stat.ml
calipso/test/: ko.c  ok.c  return.c  siblings.c  strategy.c  switch.c  to.c
ctoxml/: .cvsignore  Makefile  Makefile.am  ctoxml_bin.ml  dune
ctoxml/test/: dedup.t
ctoxml/test.t/: anonymous-structs.c  c99-struct-initializers.c  complex-pre.c  echo.c  obj.c  posix.h  run.t  so.c  symexec-crc32.c  symexec-faux.c  symexec-guess-many-tries-switch.c  symexec-guess-many-tries.c  symexec-guess.c  symexec-input.c  symexec-palindrome.c  symexec-simple.c  trivial.c
frontc/: .cvsignore  Makefile  Makefile.am  cabs.ml  clexer.ml  clexer.mll  cparser.mly  cprint.ml  ctokens.mly  ctoxml.ml  cxml.ml  dune  frontc.ml  rewrite.ml
printc/: Makefile  dune  printc_bin.ml
test.t/: calipso  for.c  from.c  maxalign_long_long.c  okp.c  run.t  volatile.c
