site_OCAMLLIBS=frontc.cma
frontc_cma_SOURCES= \
	cabs.ml \
	clexer.mll \
	cparser.mly \
	cxml.ml \
	ctoxml.ml \
	cprint.ml \
	frontc.ml

site_OPTOCAMLLIBS=frontc.cmxa
frontc_cmxa_SOURCES=  \
	cabs.ml \
	clexer.mll \
	cparser.mly \
	cxml.ml \
	ctoxml.ml \
	cprint.ml \
	frontc.ml

clexer.cmo: cparser.cmi

clexer.cmx: cparser.cmi
